--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,22 @@
 {
     "packageDirectories": [
-      {
-        "path": "force-app",
-        "default": true
-      }
+        {
+            "path": "force-app",
+            "default": true
+        },
+        {
+            "path": "force-app",
+            "package": "Gantt",
+            "versionName": "ver 0.1",
+            "versionNumber": "0.1.0.NEXT",
+            "default": false
+        }
     ],
     "namespace": "",
-    "sfdcLoginUrl": "",
-    "sourceApiVersion": "47.0"
-  }
+    "sfdcLoginUrl": "https://test.salesforce.com",
+    "sourceApiVersion": "49.0",
+    "packageAliases": {
+        "Gantt": "0Ho1M000000GmaTSAS",
+        "Gantt@0.1.0-1": "04t1M000000kaScQAI"
+    }
+}
